# basemyai

./: .dockerignore  .gitignore  ADR.md  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  TRADEMARK_POLICY.md  clippy.toml  deny.toml  dist-workspace.toml  docker-compose.yml  openapi-sidecar.yaml
.cargo/: config.toml
bindings/basemyai-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.examples.json
bindings/basemyai-node/__tests__/: roundtrip.test.js  watch.test.js
bindings/basemyai-node/src/: errors.rs  lib.rs  memory.rs  types.rs
bindings/basemyai-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/basemyai-py/python/basemyai/: __init__.py  __init__.pyi
bindings/basemyai-py/src/: errors.rs  lib.rs  memory.rs  types.rs
bindings/basemyai-py/tests/: test_roundtrip.py
crates/basemyai/: Cargo.toml  README.md
crates/basemyai-cli/: Cargo.toml
crates/basemyai-cli/src/: cli.rs  cli_config.rs  commands_graph.rs  commands_maintenance.rs  commands_memory.rs  context.rs  error.rs  exit.rs  main.rs  output.rs  persisted_config.rs
crates/basemyai-cli/src/commands/: compile_context.rs  config.rs  config_key.rs  container.rs  eval.rs  graph.rs  maintenance.rs  memory.rs  mod.rs  provision.rs
crates/basemyai-cli/src/ui/: color.rs  error.rs  mod.rs  progress.rs  render.rs  table.rs  theme.rs
crates/basemyai-cli/tests/: cli.rs
crates/basemyai-core/: Cargo.toml  README.md
crates/basemyai-core/benches/: knn_scalability.rs
crates/basemyai-core/src/: embed.rs  error.rs  lib.rs  maintenance.rs  store.rs  vector.rs
crates/basemyai-core/src/embed/: candle.rs  mod.rs
crates/basemyai-core/src/storage/: engine.rs  key.rs  key_acl.rs  mod.rs  native.rs  store.rs  vector.rs
crates/basemyai-core/tests/: agnosticity.rs  candle_stress.rs  contracts.rs  embed.rs  libsql_smoke.rs  store.rs
crates/basemyai-engine/: Cargo.toml
crates/basemyai-engine/fuzz/: Cargo.toml  README.md
crates/basemyai-engine/fuzz/fuzz_targets/: fts_postings_decode.rs  graph_edge_decode.rs  graph_entity_decode.rs  memory_vecmap_decode.rs  sst_block_index_decode.rs  sst_data_block_decode.rs  sst_data_block_decode_structured.rs  sst_decode.rs  sst_decode_structured.rs  sst_footer_decode.rs  sst_header_decode.rs  store_meta_decode.rs  vector_meta_decode.rs  wal_envelope_decode.rs
crates/basemyai-engine/src/: crypto.rs  error.rs  failpoint.rs  fs_util.rs  harness.rs  lib.rs
crates/basemyai-engine/src/crypto/: material.rs  test_support.rs
crates/basemyai-engine/src/format/: checksum.rs  crypto.rs  generation_meta.rs  lock.rs  mod.rs  sst.rs  sst_block.rs  sst_manifest.rs  store_meta.rs  wal.rs  wal_epoch.rs
crates/basemyai-engine/src/idx/: mod.rs
crates/basemyai-engine/src/key/: mod.rs
crates/basemyai-engine/src/store/: block_cache.rs  engine.rs  memtable.rs  mod.rs  repair.rs  sst.rs  sst_block.rs  stats.rs  verify.rs  verify_logical.rs  version.rs  wal.rs
crates/basemyai-engine/tests/: adr042_contract.rs  basic.rs  corruption_smoke.rs  crash_consistency.rs  engine_stats.rs  failpoints.rs  format_lock.rs  generation_pointer_loss_is_rejected_and_gen1_survives.rs  graph_parity.rs  io_faults.rs  snapshot_compaction.rs  vector_churn.rs  vector_persistence.rs  vector_recall.rs
crates/basemyai-engine/tests/common/: mod.rs
crates/basemyai-engine/tests/compaction/: compaction_overlapping_key_race.rs  compaction_remove_retry.rs  generation_gc_retry.rs  snapshot_compaction.rs
crates/basemyai-engine/tests/crash/: crash_consistency.rs  failpoints.rs  malformed_open.rs
crates/basemyai-engine/tests/engine/: engine_stats.rs  model_based.rs
crates/basemyai-engine/tests/format/: format_lock.rs
crates/basemyai-engine/tests/graph/: graph_parity.rs
crates/basemyai-engine/tests/vector/: vector_churn.rs  vector_persistence.rs  vector_recall.rs
crates/basemyai-eval/: Cargo.toml
crates/basemyai-eval/src/: adapter.rs  compare.rs  error.rs  lib.rs  main.rs  metrics.rs  report.rs  runner.rs  schema.rs
crates/basemyai-eval/tests/: cli.rs
crates/basemyai-mcp/: Cargo.toml
crates/basemyai-mcp/src/: audit.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  provider.rs  sampling.rs  server.rs
crates/basemyai-mcp/src/tools/: compile_context.rs  consolidate.rs  invalidate.rs  mod.rs  recall.rs  recall_graph.rs  remember.rs  stats.rs  watch.rs
crates/basemyai-mcp/src/transport/: http.rs  mod.rs  stdio.rs
crates/basemyai-mcp/tests/: sampling.rs  server.rs  watch.rs
crates/basemyai-rest/: Cargo.toml  Dockerfile  README.md  openapi.yaml
crates/basemyai-rest/src/: config.rs  error.rs  lib.rs  main.rs  provider.rs  routes.rs  state.rs
crates/basemyai-rest/src/config/: environment.rs  mod.rs  validation.rs
crates/basemyai-rest/src/context/: app_state.rs  memory_registry.rs  mod.rs  request_context.rs
crates/basemyai-rest/src/endpoints/: mod.rs
crates/basemyai-rest/src/http/: error.rs  extract.rs  mod.rs  pagination.rs  response.rs
crates/basemyai-rest/tests/: api.rs  contract.rs  integration.rs  security.rs
crates/basemyai/examples/: llm_consolidation.rs  memory_basic.rs  temporal_replacement.rs
crates/basemyai/src/: config.rs  consolidation.rs  error.rs  graph.rs  isolation.rs  lib.rs  llm_provision.rs  maintenance.rs  memory.rs  retrieval.rs  schema.rs  setup.rs  temporal.rs
crates/basemyai/tests/: README.md  consolidation.rs  consolidation_e2e.rs  context.rs  contracts.rs  events.rs  export_isolation_adversarial.rs  forgetting.rs  format.rs  gc.rs  graph.rs  isolation_recall_graph_adversarial.rs  key_rotation.rs  llm_provision.rs  maintenance_worker.rs  memory.rs  memory_tests.rs  native_memory_store_bench.rs  p1_isolation_adversarial.rs  plaintext_open_forbidden.rs  poisoning_procedural_recall.rs  pool_concurrency.rs  porting.rs  provenance_trust.rs  provisioning.rs  retrieval.rs  storage_contract.rs  temporal_dedup_consolidation.rs  temporal_replacement_ci.rs  zero_network_recall.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+367 files in other folders)
