# BaseMyAI — workspace racine.
# Deux crates publiables indépendamment : le socle agnostique (basemyai-core)
# et la sémantique mémoire (basemyai). Voir ECOSYSTEM_ARCHITECTURE.md et ADR.md.

[workspace]
resolver = "3"
members = [
    "crates/basemyai-core",
    "crates/basemyai",
    "crates/basemyai-mcp",
    "crates/basemyai-rest",
    "crates/basemyai-cli",
    "crates/basemyai-engine",
    "bindings/basemyai-py",
    "bindings/basemyai-node",
    "xtask",
]

# `cargo build`/`test` sans `-p` ne compilent pas xtask (outil DX interne,
# invoqué via l'alias `cargo xtask` — voir .cargo/config.toml).
default-members = [
    "crates/basemyai-core",
    "crates/basemyai",
    "crates/basemyai-mcp",
    "crates/basemyai-rest",
    "crates/basemyai-cli",
    "bindings/basemyai-py",
    "bindings/basemyai-node",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "BUSL-1.1"
authors = ["BaseMyAI contributors"]
repository = "https://github.com/basemyai/basemyai"

# Dépendances centralisées : chaque crate les active via `dep.workspace = true`.
[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
# Backend natif BaseMyAI (ADR-024/025/030) — vecteur, graphe, FTS, chiffrement pur Rust.
async-trait = "0.1"
# ML (Candle) — lourd, activé par la feature `embed` seulement.
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
# Tokenizer BERT — on désactive les features réseau (http) : le core ne télécharge jamais.
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
serde_json = "1"
# Détection matérielle (RAM, cœurs, GPU best-effort) pour le setup hardware-aware.
sysinfo = "0.39"
# Détection GPU NVIDIA via NVML (feature optionnelle `cuda-detect`, basemyai) —
# comptage GPU + VRAM par device, pur binding Rust (pas de CMake). Best-effort :
# NVML/driver absent (cas normal sans GPU NVIDIA, ex. CI) ne doit jamais paniquer.
nvml-wrapper = "0.12"
# Résolution du cache modèle (~/.basemyai/models) cross-plateforme.
dirs = "6"
# Client HTTP async (provisioning LLM : détection Ollama/llama.cpp). rustls évite
# OpenSSL sur Windows (pas de dep système supplémentaire).
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
sha2 = "0.11"
# AEAD XChaCha20-Poly1305 (ADR-030 : chiffrement au repos du moteur natif).
# Pur Rust (RustCrypto), sans feature gate côté moteur — contrairement au
# `crypto` libSQL, il n'y a aucun coût d'installation (CMake) à éviter.
chacha20poly1305 = "0.10"
# Effacement mémoire des clés DEK (ADR-030, basemyai-engine).
zeroize = { version = "1", features = ["derive"] }
# HTTP framework — basemyai-mcp (transport HTTP) et basemyai-rest.
axum        = { version = "0.8", features = ["macros"] }
tower       = { version = "0.5", features = ["util"] }
tower-http  = { version = "0.7", features = ["timeout", "trace", "request-id", "limit", "set-header"] }
# Stream combinators (SSE : relaie `MemorySubscription::recv` en flux axum).
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# MCP (Model Context Protocol) — server + macros.
rmcp        = { version = "1.7", features = ["server", "macros"] }
# JSON Schema pour les macros #[tool] de rmcp.
schemars    = "1.2"
# Comparaison de tokens en temps constant (auth Bearer anti timing-attack).
subtle      = "2"
# UUID v4 — généré pour les souvenirs et X-Request-Id.
uuid        = { version = "1", features = ["v4"] }
# Lazy singleton (runtime tokio dans les bindings FFI).
once_cell   = "1"
# Parsing de config.toml (clé API MCP, db-path).
toml        = "1.1"
# Tests d'intégration CLI (process spawn + assertions stdout/exit code).
assert_cmd  = "2"
predicates  = "3"
tempfile    = "3"
criterion   = "0.7"

# Lints partagés par tout le workspace (Rust 2026).
# Gate : `cargo xtask check` (matrice clippy CI par crate, -D warnings — CLAUDE.md).
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
# Base : tout `clippy::all`, priorité basse pour que les règles ci-dessous priment.
all = { level = "warn", priority = -1 }

# --- Encode les règles dures de CLAUDE.md dans le compilateur ---
# « Jamais unwrap() en code lib » (les tests sont exemptés via clippy.toml).
# NB : on n'active PAS `expect_used` — la règle CLAUDE.md autorise `expect("message")`,
# or ce lint interdit tout `expect`, même messagé. Il contredirait la règle.
unwrap_used = "warn"
# « Pas de Mutex std tenu à travers un .await » — le lint exact pour ça.
await_holding_lock = "warn"
# Pas de panic!/todo!/unimplemented! qui traîne en lib (les `todo!()` du scaffold
# doivent être traqués, pas oubliés).
todo = "warn"

# --- Hygiène d'allocation / clonage (repris de la politique SurrealDB) ---
# `Arc::clone(&x)` plutôt que `x.clone()` : la duplication de pointeur devient visible.
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
implicit_clone = "warn"
unnecessary_to_owned = "warn"
inefficient_to_string = "warn"
cloned_instead_of_copied = "warn"
option_as_ref_cloned = "warn"

# --- Idiomes & micro-perf à faible bruit ---
explicit_into_iter_loop = "warn"
trivially_copy_pass_by_ref = "warn"
mutex_atomic = "warn"
lossy_float_literal = "warn"
set_contains_or_insert = "warn"

# Profils
# --------
# `dev` : itération rapide. `line-tables-only` garde les backtraces panic/RUST_BACKTRACE
# (fichier:ligne) mais jette le DWARF des variables locales — une part notable du coût
# de codegen+link, rarement utile au quotidien. `unpacked` évite une passe de packaging.
# Gain net sur un workspace qui tire libSQL (bindgen/cc) + Candle.
# Pour debugger sous gdb/lldb : `cargo build --config 'profile.dev.debug=2'`.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
codegen-units = 1

# `profiling` : binaire optimisé MAIS symbolisable (perf/flamegraph), unwind conservé.
# ThinLTO multi-CU pour que le link parallélise au lieu d'un rustc mono-thread interminable.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = false
lto = "thin"
codegen-units = 16

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
