[build-system]
requires      = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name            = "basemyai"
version         = "0.2.0"
description     = "Local memory engine for AI agents — Python bindings"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "BUSL-1.1" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name   = "basemyai._internal"
features      = ["embed"]
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode                       = "auto"
asyncio_default_fixture_loop_scope = "session"
