[package]
name        = "basemyai-cli"
description = "Developer CLI for the BaseMyAI agent memory database (init, inspect, recall, verify, migrate, setup)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

# Le binaire s'appelle `basemyai` (pas `basemyai-cli`) : c'est la commande
# utilisateur (`basemyai init ./agent.bmai`).
[[bin]]
name = "basemyai"
path = "src/main.rs"

[features]
# Mêmes features que basemyai-mcp : le chemin réel exige le chiffrement (crypto)
# et l'embedder Candle (embed). Tous deux sont dans le set par défaut.
default = ["embed", "crypto"]
embed   = ["basemyai/embed"]
crypto  = ["basemyai/crypto"]

[dependencies]
basemyai      = { path = "../basemyai" }
basemyai-core = { version = "0.1.0", path = "../basemyai-core" }

clap = { version = "4", features = ["derive"] }
tokio.workspace   = true
dirs.workspace    = true
tracing.workspace = true

[lints]
workspace = true
