[package]
name        = "basemyai-cli"
description = "Developer CLI for the BaseMyAI agent memory database (init, remember, recall, list, forget, export/import, graph, maintenance, consolidate, setup)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

# Le binaire s'appelle `basemyai` (pas `basemyai-cli`) : c'est la commande
# utilisateur (`basemyai init ./agent.bmai`).
[[bin]]
name = "basemyai"
path = "src/main.rs"

[features]
# Mêmes features que basemyai-mcp : le chemin réel exige le chiffrement (crypto)
# et l'embedder Candle (embed). Tous deux sont dans le set par défaut.
default = ["embed", "crypto"]
embed   = ["basemyai/embed"]
crypto  = ["basemyai/crypto"]

[dependencies]
basemyai      = { path = "../basemyai" }
basemyai-core = { version = "0.1.0", path = "../basemyai-core" }

clap          = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio.workspace      = true
dirs.workspace       = true
tracing.workspace    = true
serde.workspace      = true
serde_json.workspace = true
toml.workspace       = true
thiserror.workspace  = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace   = true

[lints]
workspace = true
