[package]
name        = "basemyai-cli"
description = "Developer CLI for the BaseMyAI agent memory database (init, remember, recall, list, forget, export/import, graph, consolidate, setup)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

# Le binaire s'appelle `basemyai` (pas `basemyai-cli`) : c'est la commande
# utilisateur (`basemyai init ./agent.bmai`).
[[bin]]
name = "basemyai"
path = "src/main.rs"

[features]
# `embed` (Candle) est nécessaire pour les commandes qui embeddent
# (remember/recall) — les commandes purement structurelles
# (forget/invalidate/purge/graph/list) ne le chargent pas. Le moteur natif
# (ADR-032) est l'unique backend, plus un choix de feature.
default  = ["embed"]
embed    = ["basemyai/embed"]
# `basemyai eval run|compare` (Recall Quality Lab, R2.x). Off par défaut :
# `basemyai-eval` active `basemyai/test-util` (HashEmbedder, store éphémère
# de test), qu'on ne veut pas dans un binaire distribué par défaut
# (cargo-dist). Build dev/CI explicite : `--features eval-lab`.
eval-lab = ["dep:basemyai-eval"]

[dependencies]
basemyai      = { path = "../basemyai" }
basemyai-core = { version = "0.2.0", path = "../basemyai-core" }
basemyai-eval = { path = "../basemyai-eval", optional = true }

clap          = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
indicatif = "0.18"
owo-colors = { version = "4", features = ["supports-colors"] }
textwrap = "0.16"
tokio.workspace      = true
dirs.workspace       = true
tracing.workspace    = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde.workspace      = true
serde_json.workspace = true
toml.workspace       = true
thiserror.workspace  = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace   = true

[lints]
workspace = true
