[package]
name = "basemyai-core"
description = "Business-agnostic embedded foundation: native storage engine (vector + graph + FTS + encryption), Candle embeddings, async maintenance."
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/basemyai-core"
keywords = ["embedded", "vector-search", "embeddings", "storage-engine"]
categories = ["database-implementations", "algorithms"]

[features]
default = []
# Inférence ML (Candle) — opt-in : un consommateur peut fournir son propre
# Embedder via le trait sans compiler Candle.
embed = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:serde_json"]
# Ouvre des stores natifs en clair pour les tests unitaires du core.
test-util = ["basemyai-engine/test-util"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
async-trait.workspace = true
# Boucle de maintenance async (spawn + sleep). rt/time/macros suffisent.
tokio.workspace = true
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true }
zeroize.workspace = true
# Backend natif (ADR-024/ADR-025/ADR-032) — dépendance directe et unique.
# Interne, non publié (voir crates/basemyai-engine/Cargo.toml).
basemyai-engine = { path = "../basemyai-engine" }

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true

# CRYPTO-2 (BaseMyAI adversarial audit, 2026-07-22): the default encryption
# key file/directory (`~/.basemyai/{key,.}`) is restricted to the current
# user's SID on write via `SetNamedSecurityInfoW` — the Unix path already
# does this via `chmod`-equivalent mode bits; Windows had no equivalent
# (`create_dir_all`/`fs::write` unconditionally, `validate_default_key_permissions`
# a no-op). Pure Win32 API, no CMake, matching this workspace's existing
# `windows-sys`-only posture for platform code (`basemyai-engine`'s RSS sampler).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }

[lints]
workspace = true
