[package]
name = "basemyai-engine"
description = "Home-grown LSM-tree storage foundation for BaseMyAI's native engine (ADR-024/ADR-025) — internal, not published, not yet wired into basemyai-core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
default = []
# Gates anything this crate exposes to the rest of the workspace once wiring
# begins (EngineKind::Native, MemoryStore impl — a separate, later N2 item).
# Not used yet: today this crate only builds and tests itself. See
# docs/adr/ADR-025-native-engine-storage-foundation.md and
# docs/PLAN-NATIVE-ENGINE.md §3.1.
engine-native = []

[dependencies]
thiserror.workspace = true
tracing.workspace = true

# `vector_bench` (src/bin, N3.1 follow-up) in-process RAM sampler only —
# not used by the library itself. Windows has no portable std API for
# reading this process's own working-set size, unlike Linux's
# `/proc/self/status` (no dependency needed there).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
