[package]
name = "basemyai-engine"
description = "Home-grown LSM-tree storage engine for BaseMyAI native backend (ADR-024/ADR-025/ADR-032) — internal, not published."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
autobins = false

[features]
# Ouvre des stores persistants en clair (`Engine::open`) — tests et benches
# uniquement, jamais en production.
test-util = []

[[bin]]
name = "crash_writer"
path = "src/bin/crash_writer.rs"
required-features = ["test-util"]

[[bin]]
name = "vector_bench"
path = "src/bin/vector_bench.rs"
required-features = ["test-util"]

[[bin]]
name = "engine_bench"
path = "src/bin/engine_bench.rs"
required-features = ["test-util"]

# Spike N8.1 (ADR-039) — prototype jetable du format SST par blocs ;
# supprimable une fois les codecs N8.2+ en place.
[[bin]]
name = "block_spike"
path = "src/bin/block_spike.rs"
required-features = ["test-util"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
# Chiffrement au repos (ADR-030) : AEAD XChaCha20-Poly1305 + dérivation
# SHA-256 de la clé d'enveloppe. Inconditionnel (pur Rust, léger) — pas de
# feature gate, contrairement au `crypto` libSQL qui exige CMake.
chacha20poly1305.workspace = true
sha2.workspace = true
zeroize.workspace = true

# `vector_bench` (src/bin, N3.1 follow-up) in-process RAM sampler only —
# not used by the library itself. Windows has no portable std API for
# reading this process's own working-set size, unlike Linux's
# `/proc/self/status` (no dependency needed there).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
