[package]
name = "basemyai-engine"
description = "Home-grown LSM-tree storage engine for BaseMyAI native backend (ADR-024/ADR-025/ADR-032) — internal, not published."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
autobins = false
autotests = false

[features]
# Ouvre des stores persistants en clair (`Engine::open`) — tests et benches
# uniquement, jamais en production.
test-util = []

[[bin]]
name = "crash_writer"
path = "src/bin/crash_writer.rs"
required-features = ["test-util"]

[[bin]]
name = "vector_bench"
path = "src/bin/vector_bench.rs"
required-features = ["test-util"]

[[bin]]
name = "engine_bench"
path = "src/bin/engine_bench.rs"
required-features = ["test-util"]

# Spike N8.1 (ADR-039) — prototype jetable du format SST par blocs ;
# supprimable une fois les codecs N8.2+ en place.
[[bin]]
name = "block_spike"
path = "src/bin/block_spike.rs"
required-features = ["test-util"]

[[bin]]
name = "argon2_bench"
path = "src/bin/argon2_bench.rs"
required-features = ["test-util"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
# Chiffrement au repos (ADR-030) : AEAD XChaCha20-Poly1305 + dérivation
# SHA-256 de la clé d'enveloppe. Inconditionnel (pur Rust, léger) — pas de
# feature gate, contrairement au `crypto` libSQL qui exige CMake.
chacha20poly1305.workspace = true
argon2.workspace = true
sha2.workspace = true
zeroize.workspace = true
uuid.workspace = true

# `vector_bench` (src/bin, N3.1 follow-up) in-process RAM sampler only —
# not used by the library itself. Windows has no portable std API for
# reading this process's own working-set size, unlike Linux's
# `/proc/self/status` (no dependency needed there).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true

# `tests/*` reorganisé par domaine (crash/, compaction/, vector/, graph/,
# format/, engine/) — voir `tests/common/mod.rs` pour le helper partagé.
# Noms de binaire inchangés : les invocations `--test <name>` dans
# `xtask/src/main.rs` et `.github/workflows/*.yml` restent valides.
[[test]]
name = "basic"
path = "tests/engine/basic.rs"

[[test]]
name = "engine_stats"
path = "tests/engine/engine_stats.rs"

[[test]]
name = "model_based"
path = "tests/engine/model_based.rs"

[[test]]
name = "vector_recall"
path = "tests/vector/vector_recall.rs"

[[test]]
name = "vector_persistence"
path = "tests/vector/vector_persistence.rs"

[[test]]
name = "vector_churn"
path = "tests/vector/vector_churn.rs"

[[test]]
name = "graph_parity"
path = "tests/graph/graph_parity.rs"

[[test]]
name = "format_lock"
path = "tests/format/format_lock.rs"

[[test]]
name = "adr042_contract"
path = "tests/format/adr042_contract.rs"

[[test]]
name = "malformed_open"
path = "tests/crash/malformed_open.rs"

[[test]]
name = "failpoints"
path = "tests/crash/failpoints.rs"

[[test]]
name = "corruption_smoke"
path = "tests/crash/corruption_smoke.rs"

[[test]]
name = "io_faults"
path = "tests/crash/io_faults.rs"

[[test]]
name = "crash_consistency"
path = "tests/crash/crash_consistency.rs"

[[test]]
name = "compaction_overlapping_key_race"
path = "tests/compaction/compaction_overlapping_key_race.rs"

[[test]]
name = "compaction_remove_retry"
path = "tests/compaction/compaction_remove_retry.rs"

[[test]]
name = "snapshot_compaction"
path = "tests/compaction/snapshot_compaction.rs"

[[test]]
name = "generation_gc_retry"
path = "tests/compaction/generation_gc_retry.rs"

[[test]]
name = "generation_pointer_loss_is_rejected_and_gen1_survives"
path = "tests/compaction/generation_pointer_loss_is_rejected_and_gen1_survives.rs"

[lints]
workspace = true
