[package]
name = "basemyai-eval"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "BUSL-1.1"
publish = false
description = "Deterministic offline recall and context quality lab for BaseMyAI"

# This crate is intentionally standalone until the root workspace, xtask and CI
# wiring is approved as a separate integration change.
[workspace]
resolver = "3"

[dependencies]
basemyai = { path = "../basemyai", features = ["test-util"] }
basemyai-core = { path = "../basemyai-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
todo = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
