[package]
name = "basemyai-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Deterministic offline recall and context quality lab for BaseMyAI"

[dependencies]
basemyai = { path = "../basemyai", features = ["test-util"] }
basemyai-core = { version = "0.2.0", path = "../basemyai-core" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
