[package]
name        = "basemyai-mcp"
description = "MCP server (stdio + HTTP) for BaseMyAI memory engine."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

# Not distributed via `cargo-dist` (see root `dist-workspace.toml`): the MCP
# server ships via stdio/HTTP transports consumed by MCP clients (Claude
# Desktop, etc.), not as a standalone precompiled binary. Only `basemyai-cli`
# opts into `dist`.
[package.metadata.dist]
dist = false

[features]
default = ["embed", "stdio", "http"]
embed   = ["basemyai/embed"]
stdio   = ["rmcp/transport-io"]
http    = ["rmcp/transport-streamable-http-server", "dep:axum", "dep:tower", "dep:tower-http"]
# `test-util` : InMemoryProvider + embedder déterministe (ni CMake ni Candle).
# Tire aussi `rmcp/client` : les tests de sampling montent un vrai client MCP.
test-util = ["basemyai/test-util", "rmcp/client"]

[dependencies]
basemyai      = { path = "../basemyai" }
basemyai-core = { version = "0.2.0", path = "../basemyai-core" }

rmcp        = { version = "2.2", features = ["server", "macros"] }
axum        = { version = "0.8", optional = true, features = ["macros"] }
tower       = { workspace = true, optional = true }
tower-http  = { version = "0.7", optional = true, features = ["timeout", "trace"] }

thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
tracing.workspace    = true
# Subscriber pour le binaire : logs sur STDERR (en stdio, stdout = canal MCP).
tracing-subscriber = { version = "0.3", features = ["fmt"] }
async-trait.workspace = true

schemars = "1.2"
subtle   = "2"
uuid     = { version = "1", features = ["v4"] }
dirs.workspace = true
toml     = "1.1"

[lints]
workspace = true
